fixed header spacing

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -14,8 +14,8 @@
 .HeaderGroup {
   max-width: 300px;
   float: right;
-
-  margin-right: calc(#{$page-margin}*2);;
+  margin-right: $page-margin;
+  // margin-right: calc(#{$page-margin}*2);
   height: 20px;
 }
 
